--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,25 @@
-asgiref==3.7.2
+asgiref==3.8.1
+click==8.1.8
+colorama==0.4.6
+cssbeautifier==1.15.1
 Django==5.1.4
-django-cachalot==2.6.1
 django-minify-html==1.7.0
+EditorConfig==0.17.0
+et_xmlfile==2.0.0
+jsbeautifier==1.15.1
+json5==0.10.0
 minify_html==0.15.0
+numpy==2.2.1
+openpyxl==3.1.5
+pandas==2.2.3
+pathspec==0.12.1
+python-dateutil==2.9.0.post0
+pytz==2024.2
+PyYAML==6.0.2
+regex==2024.11.6
+six==1.17.0
 sqlparse==0.5.3
+tqdm==4.67.1
 typing_extensions==4.8.0
+tzdata==2024.2
+whitenoise==6.8.2
